#55 unicode escape sequences

--- a/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get_pt_BR.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/site-webscripts/uploader-plus/uploader-plus-admin.get_pt_BR.properties
@@ -1,12 +1,12 @@
 title.path = Caminho
 title.allowed.types = Tipos permitidos
-title.actions = Ações
+title.actions = A\u00E7\u00F5es
 loading.folders = Carregando pastas
-no.folders.found = Pastas não encontradas
+no.folders.found = Pastas n\u00E3o encontradas
 upload.folders = Pastas para upload
-open.in.repository=Abrir no repositório
-operation.completed.successfully = Operação completada com sucesso
-operation.failed = Operação falhou
+open.in.repository=Abrir no reposit\u00F3rio
+operation.completed.successfully = Opera\u00E7\u00E3o completada com sucesso
+operation.failed = Opera\u00E7\u00E3o falhou
 select.the.upload.folder=Selecione a pasta para upload
 new.upload.folder=Nova pasta para upload
-_.is.already.an.upload.folder={path} já é uma pasta para upload
+_.is.already.an.upload.folder={path} j\u00E1 \u00E9 uma pasta para upload
