--- a/surf/src/main/amp/config/alfresco/web-extension/messages/uploader-plus_pt_BR.properties
+++ b/surf/src/main/amp/config/alfresco/web-extension/messages/uploader-plus_pt_BR.properties
@@ -2,4 +2,4 @@ tool.uploader-plus-admin.label=Uploader Plus
 tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Pasta para upload
 content.type=Tipo documental
-uploader.plus.next=Próximo
+uploader.plus.next=Pr\u00F3ximo
