Add localization message

--- a/surf/src/main/amp/config/alfresco/messages/uploader-plus_de.properties
+++ b/surf/src/main/amp/config/alfresco/messages/uploader-plus_de.properties
@@ -3,3 +3,4 @@ tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Uploadverzeichnis
 content.type=Dokumenttyp
 uploader.plus.next=Weiter
+uploader.plus.applyToAll=Metadateneingabe auf alle Dokumente anwenden
