--- a/surf/src/main/amp/config/alfresco/messages/uploader-plus_pt_BR.properties
+++ b/surf/src/main/amp/config/alfresco/messages/uploader-plus_pt_BR.properties
@@ -3,3 +3,4 @@ tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Pasta para upload
 content.type=Tipo documental
 uploader.plus.next=Pr\u00F3ximo
+uploader.plus.applyToAll=Aplicar o mesmo conjunto de metadados em todos os arquivos
