--- a/surf/src/main/amp/config/alfresco/messages/uploader-plus_es.properties
+++ b/surf/src/main/amp/config/alfresco/messages/uploader-plus_es.properties
@@ -3,3 +3,4 @@ tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Carpeta de Tipos
 content.type=Tipo documental
 uploader.plus.next=Siguiente
+uploader.plus.applyToAll=Aplicar el mismo conjunto de metadatos a todos los archivos
