--- a/surf/src/main/amp/config/alfresco/messages/uploader-plus_it.properties
+++ b/surf/src/main/amp/config/alfresco/messages/uploader-plus_it.properties
@@ -3,3 +3,4 @@ tool.uploader-plus-admin.description=Uploader Plus
 aspect.up_UploadFolder=Cartella di caricamento
 content.type=Tipo di contenuto
 uploader.plus.next=Avanti
+uploader.plus.applyToAll=Applicare lo stesso set di metadati di tutti i file
